charts/all/babeljenks/templates/babeljenks-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: babeljenks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: babeljenks
  template:
     metadata:
       labels:
         app: babeljenks
     spec:
      containers:
      - name: babeljenks
        image: quay.io/rhn_gps_cjenkins/babeljenks
        #imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe:
          httpGet:
            path: /index.html
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /index.php
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
