charts/all/babeljenks/templates/babeljenks-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: babeljenks 
  name: babeljenkins
spec:
  ports:
  - name: 8000-tcp
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: babeljenks
  sessionAffinity: None
  type: ClusterIP
