charts/all/babeljenks/templates/babeljenks-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: babeljenks
  labels:
    app: babeljenks
spec:
  port:
    targetPort: 8000-tcp
  to:
    kind: Service
    name: babeljenks
    weight: 100
  wildcardPolicy: None
